// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Test enhanceYaml() Create new ui5-mock.yaml based on ui5.yaml and manifest without dataSources 1`] = `
"# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"2.5\\"
metadata:
  name: dummy.application
type: application
server:
  customMiddleware:
    - name: first-middleware
      firstProp: firstValue
      nested:
        nestedPropA: nestedValueA # comment for nested value A
        list:
          - listValueA
          - listValueB
    - name: second-middleware
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services: []
        annotations: []
"
`;

exports[`Test enhanceYaml() Create new ui5-mock.yaml based on ui5.yaml, updated with services and annotations 1`] = `
"# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"2.5\\"
metadata:
  name: dummy.application
type: application
server:
  customMiddleware:
    - name: first-middleware
      firstProp: firstValue
      nested:
        nestedPropA: nestedValueA # comment for nested value A
        list:
          - listValueA
          - listValueB
    - name: second-middleware
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: /sap/opu/odata/sap/SEPMRA_PROD_MAN
            metadataPath: ./webapp/localService/mainService/metadata.xml
            mockdataPath: ./webapp/localService/mainService/data
            generateMockData: true
        annotations:
          - localPath: ./webapp/localService/SEPMRA_PROD_MAN.xml
            urlPath: /sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='SEPMRA_PROD_MAN',Version='0001')/$value/
"
`;

exports[`Test enhanceYaml() Create new ui5-mock.yaml based on ui5.yaml, updated with services and annotations with value list references 1`] = `
"# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"2.5\\"
metadata:
  name: dummy.application
type: application
server:
  customMiddleware:
    - name: first-middleware
      firstProp: firstValue
      nested:
        nestedPropA: nestedValueA # comment for nested value A
        list:
          - listValueA
          - listValueB
    - name: second-middleware
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: /sap/opu/odata/sap/SEPMRA_PROD_MAN
            metadataPath: ./webapp/localService/mainService/metadata.xml
            mockdataPath: ./webapp/localService/mainService/data
            generateMockData: true
            resolveExternalServiceReferences: true
        annotations:
          - localPath: ./webapp/localService/SEPMRA_PROD_MAN.xml
            urlPath: /sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='SEPMRA_PROD_MAN',Version='0001')/$value/
"
`;

exports[`Test enhanceYaml() Create new ui5-mock.yaml with services and annotations from mock manifest.json 1`] = `
"# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"2.5\\"
metadata:
  name: mockserverv2
type: application
server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: /sap/opu/odata/sap/SEPMRA_PROD_MAN
            metadataPath: ./webapp/localService/mainService/metadata.xml
            mockdataPath: ./webapp/localService/mainService/data
            generateMockData: true
        annotations:
          - localPath: ./webapp/localService/SEPMRA_PROD_MAN.xml
            urlPath: /sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='SEPMRA_PROD_MAN',Version='0001')/$value/
"
`;

exports[`Test enhanceYaml() Create new ui5-mock.yaml without app name and dataSources in manifest.json 1`] = `
"# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"2.5\\"
metadata:
  name: ''
type: application
server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services: []
        annotations: []
"
`;

exports[`Test enhanceYaml() Update old ui5-mock.yaml with service overwrite 1`] = `
"specVersion: '2.0'
metadata:
  name: 'app'
type: application
server:
  customMiddleware:
    - name: middleware-before
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: /sap/opu/odata/sap/SEPMRA_PROD_MAN
            metadataPath: ./webapp/localService/mainService/metadata.xml
            mockdataPath: ./webapp/localService/mainService/data
            generateMockData: true
        annotations:
          - localPath: ./webapp/localService/SEPMRA_PROD_MAN.xml
            urlPath: /sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='SEPMRA_PROD_MAN',Version='0001')/$value/
    - name: middleware-after
"
`;

exports[`Test enhanceYaml() Update ui5-mock.yaml, path and service name from manifest 1`] = `
"specVersion: '2.0'
metadata:
  name: 'app'
type: application
server:
  customMiddleware:
    - name: middleware-before
    - name: sap-fe-mockserver
      beforeMiddleware: fiori-tools-proxy
      configuration:
        services:
          - urlPath: /some/previous/service/uri
            metadataXmlPath: ./webapp/localService/previous-service/metadata.xml
            mockdataRootPath: ./webapp/localService/previous-service/data
            generateMockData: true
          - urlPath: ds/uri
            metadataPath: ./webapp/localService/ds/metadata.xml
            mockdataPath: ./webapp/localService/ds/data
            generateMockData: true
        annotations: []
    - name: middleware-after
"
`;

exports[`Test enhanceYaml() Update ui5-mock.yaml, path and service name from manifest with annotations 1`] = `
"specVersion: '2.0'
metadata:
  name: 'app'
type: application
server:
  customMiddleware:
    - name: middleware-before
    - name: sap-fe-mockserver
      beforeMiddleware: fiori-tools-proxy
      configuration:
        services:
          - urlPath: /some/previous/service/uri
            metadataXmlPath: ./webapp/localService/previous-service/metadata.xml
            mockdataRootPath: ./webapp/localService/previous-service/data
            generateMockData: true
          - urlPath: /sap/opu/odata/sap/SEPMRA_PROD_MAN
            metadataPath: ./webapp/localService/mainService/metadata.xml
            mockdataPath: ./webapp/localService/mainService/data
            generateMockData: true
        annotations:
          - localPath: ./webapp/localService/SEPMRA_PROD_MAN.xml
            urlPath: /sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='SEPMRA_PROD_MAN',Version='0001')/$value/
    - name: middleware-after
"
`;
